deleted:    eslint.config.mjs 	modified:   package.json

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky && husky install",
-    "lint":"eslint src/**/*.js"
+    "lint": "eslint src/**/*.js"
   },
   "author": "Meet Shah",
   "license": "ISC",
@@ -27,7 +27,12 @@
     "express": "^4.21.2"
   },
   "lint-staged": {
-    "*.{js,css,md}": "prettier --write"
-     
+    "*.{js,jsx}": [
+      "eslint ",
+      "prettier --write"
+    ],
+    "!(*.css|*.js|*.jsx)": [
+      "prettier --write"
+    ]
   }
 }
