--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "author": "Meet Shah",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.19.0",
     "eslint": "^8.57.1",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.6.0",
     "git-format-staged": "^3.1.1",
+    "globals": "^15.14.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.4.3",
     "nodemon": "^3.1.9",
