--- a/config/config.json
+++ b/config/config.json
@@ -1,15 +1,15 @@
 {
     "development": {
       "username": "root",
-      "password": "root",
+      "password": "",
       "database": "dev_example",
       "host": "localhost",
       "dialect": "mysql"
     },
     "test": {
       "username": "root",
-      "password": "root",
-      "database": "dev_example",
+      "password": "",
+      "database": "test_example",
       "host": "localhost",
       "dialect": "mysql"
     }
