--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "demo app in js",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky && husky install",
     "lint": "eslint src/**/*.js"
@@ -26,14 +26,21 @@
     "prettier": "3.4.2"
   },
   "dependencies": {
-    "express": "^4.21.2"
+    "celebrate": "^15.0.3",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "helmet": "^8.0.0",
+    "morgan": "^1.10.0",
+    "mysql2": "^3.12.0",
+    "sequelize": "^6.37.5",
+    "sequelize-cli": "^6.6.2"
   },
   "lint-staged": {
     "*.{js,jsx}": [
       "eslint ",
       "prettier --write"
     ],
-    "!(*.css|*.js|*.jsx)": [
+    "(*.css|*.js|*.jsx)": [
       "prettier --write"
     ]
   }
