--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "prettier": "3.4.2"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "celebrate": "^15.0.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "helmet": "^8.0.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.12.0",
     "sequelize": "^6.37.5",
