--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky && husky install",
-    "lint": "eslint src/**/*.js"
+    "lint": "eslint src/**/*.js",
+    "migrate": "npx sequelize-cli db:migrate",
+    "seed": "npx sequelize-cli db:seed:all"
   },
   "author": "Meet Shah",
   "license": "ISC",
@@ -23,7 +25,8 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.4.3",
     "nodemon": "^3.1.9",
-    "prettier": "3.4.2"
+    "prettier": "3.4.2",
+    "sequelize-cli": "^6.6.2"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -35,8 +38,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.12.0",
-    "sequelize": "^6.37.5",
-    "sequelize-cli": "^6.6.2"
+    "sequelize": "^6.37.5"
   },
   "lint-staged": {
     "*.{js,jsx}": [
