--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
     "development": {
       "username": "root",
       "password": "",
-      "database": "dev_example",
+      "database": "test_example",
       "host": "localhost",
       "dialect": "mysql"
     },
